# cpp_template

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
docker/builder/: Dockerfile  entrypoint.sh  useridinit.c
ext/: CMakeLists.txt
src/: CMakeLists.txt  lib.cpp  main.cpp
src/include/: lib.h
src/test/: CMakeLists.txt  test.cpp
